--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,40 @@
-repo_url : https://github.com/c01dkit/tech-blog
+repo_url : https://github.com/natro92/Rating4All
 site_name: 海南大学课程资料 - Rating4All
 site_author: Natro92
-site_url: https://tech.c01dkit.com
+site_url: https://rate.natro92.fun
 theme:
   name: material
-  features:
-    - content.code.copy
-    - content.code.annotate
+  custom_dir: overrides
+  palette:
+    - scheme: default # 日间模式
+      primary: blue # 上方的
+      accent: cyan # 链接等可交互元件的高亮色
+      toggle:
+        icon: material/weather-night # 图标
+        name: 切换至夜间模式 # 鼠标悬浮提示
+    - scheme: slate # 夜间模式
+      primary: black 
+      accent: cyan
+      toggle:
+        icon: material/weather-sunny
+        name: 切换至日间模式
+  features: 
+    - navigation.instant #- header.autohide  #自动隐藏
+    #- announce.dismiss #呈现可标记为由用户读取的临时公告，可以包含一个用于取消当前公告的按钮
+    - navigation.tracking #地址栏中的 URL 将自动更新为在目录中突出显示的活动锚点
+    - navigation.tabs #顶级部分将呈现在上面视口标题下方的菜单层中，但在移动设备上保持原样
+    #- navigation.tabs.sticky  #启用粘性选项卡后，导航选项卡将锁定在标题下方，并在向下滚动时始终保持可见
+    #- navigation.sections #启用部分后，顶级部分在边栏中呈现为1220px以上视口的组，但在移动设备上保持原样
+    - navigation.top # 返回顶部的按钮 在上滑时出现
+    - search.suggest # 搜索输入一些字母时推荐补全整个单词
+    - search.highlight # 搜索出的文章关键词加入高亮
+    - navigation.expand # 打开Tab时左侧目录全部展开
+    #- navigation.indexes #启用节索引页后，可以将文档直接附加到节
+    - search.share #搜索分享按钮
+  language: zh # 一些提示性的文字会变成中文
+
 docs_dir: docs
-copyright: '2023 Content provided by c01dkit'
+copyright: '2024 provided by You and me.'
 
-
-
+extra:
+  generator: false  #删除页脚显示“使用 MkDocs 材料制造”
